--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 }
 
                 .popup {
-                    display: flex;
+                    display: none;
                     position: fixed;
                     top: 0;
                     width: 100%;
@@ -1306,7 +1306,10 @@
                 </div>
 
                 <div class="process-box">
-                    <img src="/img/p2-gen-mind-map.webp" alt="AI Generation Bot" class="process-img">
+                    <img
+                        src="/img/p2-gen-mind-map.webp"
+                        alt="AI Generation Bot"
+                        class="process-img">
                     <div class="process-title">
                         <span class="process-number">2</span>
                         <h3>AI Processing</h3>
@@ -1531,6 +1534,62 @@
                 </div>
                 <div class="accordion-item">
                     <button id="accordion-button-1" aria-expanded="false">
+                        <span class="accordion-title">Can I put my notes in there and it will organise them?</span>
+                        <svg
+                            class="accordion-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="10"
+                            height="18"
+                            viewbox="0 0 6 11">
+                            <polyline
+                                points=".675 .925 5.323 5.5 .675 10.075"
+                                fill="none"
+                                stroke="currentcolor"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="1.5"></polyline>
+                        </svg>
+
+                    </button>
+                    <div class="accordion-content">
+                        <p>
+                            Yes, you can paste large amounts of text, such as your notes, into the input
+                            field, and Mind Map Wizard will organize them into a visual mind map. Please
+                            note that mobile device browsers may encounter difficulties when handling
+                            extensive text.
+                        </p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <button id="accordion-button-1" aria-expanded="false">
+                        <span class="accordion-title">How big is the Context window?</span>
+                        <svg
+                            class="accordion-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="10"
+                            height="18"
+                            viewbox="0 0 6 11">
+                            <polyline
+                                points=".675 .925 5.323 5.5 .675 10.075"
+                                fill="none"
+                                stroke="currentcolor"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="1.5"></polyline>
+                        </svg>
+
+                    </button>
+                    <div class="accordion-content">
+                        <p>
+                            In summary, you won't hit the limit, as it is sufficiently high for very large
+                            essays and documents. However, mobile phone browsers may experience difficulties
+                            with extremely long texts. Please refrain from using any sensitive personal
+                            data.
+                        </p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <button id="accordion-button-1" aria-expanded="false">
                         <span class="accordion-title">What is the difference between a mind map and an outline?</span>
                         <svg
                             class="accordion-icon"
@@ -1576,7 +1635,8 @@
                     </button>
                     <div class="accordion-content">
                         <p>
-                            No, you do not need to sign up to use Mind Map Wizard. You can start creating mind maps right away.
+                            No, you do not need to sign up to use Mind Map Wizard. You can start creating
+                            mind maps right away.
                         </p>
                     </div>
                 </div>
@@ -1601,7 +1661,8 @@
                     </button>
                     <div class="accordion-content">
                         <p>
-                            Yes, you can easily export your mind maps in various formats and share them on other platforms.
+                            Yes, you can easily export your mind maps in various formats and share them on
+                            other platforms.
                         </p>
                     </div>
                 </div>
@@ -1679,7 +1740,14 @@
 </ul>
 <div class="whitespace"></div>
 </div>
-<a href="https://www.producthunt.com/posts/mind-map-wizard-2?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-mind&#0045;map&#0045;wizard&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=867367&theme=light&t=1739633742200" alt="Mind&#0032;Map&#0032;Wizard - Create&#0032;infinite&#0032;Mind&#0032;Maps&#0032;using&#0032;AI&#0046;&#0032;Totally&#0032;free&#0033; | Product Hunt" style="width: 250px; height: 54px; margin: 20px;" width="250" height="54" /></a>
+<a
+href="https://www.producthunt.com/posts/mind-map-wizard-2?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-mind&#0045;map&#0045;wizard&#0045;2"
+target="_blank"><img
+src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=867367&theme=light&t=1739633742200"
+alt="Mind&#0032;Map&#0032;Wizard - Create&#0032;infinite&#0032;Mind&#0032;Maps&#0032;using&#0032;AI&#0046;&#0032;Totally&#0032;free&#0033; | Product Hunt"
+style="width: 250px; height: 54px; margin: 20px;"
+width="250"
+height="54"/></a>
 <footer>
 <div class="footer-content">
 <div class="footer-links">
@@ -1699,7 +1767,6 @@
 </footer>
 
 <script>
-
 
 function generateMindmap() {
 console.log("generateMindmap called");
