--- a/history.html
+++ b/history.html
@@ -702,7 +702,7 @@
                 padding: 0.5rem 1rem;
             }
             .popup {
-                display: flex;
+                display: none;
                 position: fixed;
                 top: 0;
                 width: 100%;
@@ -1344,6 +1344,10 @@
                 overlay.remove();
             } 
             
+
+    </script>
+</body>
+</html>
 
     </script>
 </body>
