New cookie banner logic

--- a/help/mind-map-editing.html
+++ b/help/mind-map-editing.html
@@ -281,7 +281,7 @@
             }
         }
         .popup {
-            display: flex;
+            display: none;
             position: fixed;
             top: 0;
             width: 100%;
