--- a/playground.html
+++ b/playground.html
@@ -387,7 +387,7 @@
             }
 
             .popup {
-                display: flex;
+                display: none;
                 position: fixed;
                 top: 0;
                 width: 100%;
