--- a/index.html
+++ b/index.html
@@ -1375,7 +1375,7 @@
                                 </svg>
                             </span>
                             <p>
-                                No account needet
+                                No account needed
                             </p>
                         </li>
                         <li class="list">
