--- a/help/mind-map-editing.html
+++ b/help/mind-map-editing.html
@@ -699,7 +699,7 @@
 
         <h3 id="images">7. Images</h3>
         <p>You can also add images to your mind map by using the following markdown syntax:</p>
-        <pre><code>![](https://mindmapwizard.com/img/p2-gen-mind-map.png)</code></pre>
+        <pre><code>![](https://mindmapwizard.com/img/p2-gen-mind-map.webp)</code></pre>
         <p>This will display the image directly in your mind map.</p>
         <div style="height: 40px;"></div>
         <p>Sounds complicated? Try it out!
@@ -745,6 +745,9 @@
                 .back();
         }
     </script>
+</body>
+
+</html>
 </body>
 
 </html>
