--- a/404.html
+++ b/404.html
@@ -328,11 +328,13 @@
                     <p style="margin: 0;">
                         <a href="mailto:contact@mindmapwizard.com" class="footer-link">Contact</a>
                         <span class="separator">|</span>
-                        <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
-                        <span class="separator">|</span>
                         <a href="/privacy-policy.html" class="footer-link">Privacy Policy</a>
                         <span class="separator">|</span>
+                        <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
+                        <span class="separator">|</span>
                         <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">Github</a>
+                        <span class="separator">|</span>
+                        <a href="/feedback.html" class="footer-link">Feedback</a>
                     </p>
                 </div>
                 <p class="copyright" style="margin: 0;">© 2025 Mind Map Wizard.</p>
