--- a/new.html
+++ b/new.html
@@ -83,6 +83,95 @@
                 padding: 0;
             }
 
+            .feedback-button {
+                position: fixed;
+                bottom: 20px;
+                left: 20px;
+                display: flex;
+                align-items: center;
+                background-color: rgba(255, 255, 255, 0.6);
+                backdrop-filter: blur(10px);
+                -webkit-backdrop-filter: blur(10px);
+                border-radius: 25px;
+                padding: 10px;
+                text-decoration: none;
+                color: var(--text-color);
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+                transition: all 0.3s ease;
+                z-index: 1000;
+                width: 45px;
+                overflow: hidden;
+            }
+
+            .feedback-button:hover {
+                width: 130px;
+            }
+
+            .feedback-button img {
+                width: 25px;
+                height: 25px;
+                margin-right: 10px;
+            }
+
+            .feedback-button span {
+                white-space: nowrap;
+                opacity: 0;
+                transition: opacity 0.3s ease;
+            }
+
+            .feedback-button:hover span {
+                opacity: 1;
+            }
+
+            .info-button {
+                position: fixed;
+                bottom: 15px;
+                right: 15px;
+                display: flex;
+                align-items: center;
+                background-color: rgba(248, 250, 252, 0.9);
+                backdrop-filter: blur(10px);
+                -webkit-backdrop-filter: blur(10px);
+                border-radius: 25px;
+                padding: 10px;
+                text-decoration: none;
+                color: var(--text-color);
+                transition: all 0.3s ease;
+                z-index: 1000;
+                cursor: pointer;
+            }
+
+            .info-menu {
+                position: fixed;
+                bottom: 70px;
+                right: 20px;
+                background-color: rgba(248, 250, 252, 0.9);
+                backdrop-filter: blur(10px);
+                -webkit-backdrop-filter: blur(10px);
+                border-radius: 15px;
+                padding: 10px;
+                display: none;
+                flex-direction: column;
+                z-index: 1000;
+            }
+
+            .info-menu.show {
+                display: flex;
+            }
+
+            .info-menu a {
+                color: var(--text-color);
+                text-decoration: none;
+                padding: 8px 15px;
+                border-radius: 8px;
+                transition: background-color 0.3s ease;
+                white-space: nowrap;
+            }
+
+            .info-menu a:hover {
+                background-color: rgba(0, 0, 0, 0.05);
+            }
+
             @font-face {
                 font-family: 'Open Sans';
                 src: url("/OpenSans-ExtraBold.ttf") format('truetype'), url("/OpenSans-ExtraBold.ttf") format('ttf');
@@ -99,14 +188,18 @@
                 top: 0;
                 width: 100%;
                 height: 100%;
-                background-color: rgba(0, 0, 0, 0.32);
+                background-color: rgba(0, 0, 0, 0.2);
+                backdrop-filter: blur(5px);
+                -webkit-backdrop-filter: blur(5px);
                 justify-content: center;
                 align-items: center;
                 z-index: 1100;
             }
 
             .popup-content {
-                background-color: white;
+                background-color: rgba(255, 255, 255, 0.8);
+                backdrop-filter: blur(15px);
+                -webkit-backdrop-filter: blur(15px);
                 padding: 20px;
                 border-radius: 20px;
                 text-align: left;
@@ -751,7 +844,9 @@
                 top: 0;
                 width: 100%;
                 height: 100%;
-                background-color: rgba(0, 0, 0, 0.32);
+                background-color: rgba(0, 0, 0, 0.2);
+                backdrop-filter: blur(5px);
+                -webkit-backdrop-filter: blur(5px);
                 z-index: 1500;
             }
 
@@ -829,6 +924,27 @@
                 font-size: 1.5rem;
                 margin-top: 0;
                 margin-bottom: 0;
+            }
+
+            .loading-spinner {
+                width: 40px;
+                height: 40px;
+                border: 4px solid #f3f3f3;
+                border-top: 4px solid var(--primary-color);
+                border-radius: 50%;
+                animation: spin 1s linear infinite;
+                margin: 20px auto;
+            }
+
+            @keyframes spin {
+                0% { transform: rotate(0deg); }
+                100% { transform: rotate(360deg); }
+            }
+
+            .share-dialog p {
+                text-align: left;
+                margin: 10px 0;
+                color: var(--text-color);
             }
 
             .share-link {
@@ -1263,7 +1379,7 @@
                     src="/img/icons/history-icon.svg"
                     height="28"
                     width="28"
-                    style="margin-bottom: -5px; margin-right: 5px; opacity: 0.8;">Recent Mind Maps</h2>
+                    style="margin-bottom: -5px; margin-right: 5px;">Recent Mind Maps</h2>
                 <small></small>
                 <div class="recent-list" id="recent-list">
                     <!-- Items will be added here dynamically -->
@@ -1283,7 +1399,7 @@
                                 stroke="currentColor"
                                 stroke-linecap="round"
                                 stroke-linejoin="round"
-                                stroke-width="1.1"></polyline>
+                                stroke-width="1.5"></polyline>
                         </svg>
                     </a>
                 </div>
@@ -1349,6 +1465,15 @@
         <button class="editor-button save-button" id="save-edit">Save</button>
     </div>
 </div>
+
+<div class="info-button">
+    <img src="/img/icons/info-icon.svg" alt="Info" width="22" height="22">
+</div>
+<div class="info-menu">
+    <a href="/feedback.html">Feedback</a>
+    <a href="/privacy-policy.html">Privacy Policy</a>
+    <a href="/terms-of-use.html">Terms of Use</a>
+</div>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         document.getElementById('prompt').focus();
@@ -1394,6 +1519,27 @@
     }
 
     async function shareMindmap() {
+        const shareButton = document.querySelector('.share-button');
+        if (shareButton) {
+            shareButton.disabled = true;
+            shareButton.style.opacity = '0.5';
+        }
+
+        const overlay = document.createElement('div');
+        overlay.className = 'overlay';
+        overlay.style.display = 'block';
+
+        const dialog = document.createElement('div');
+        dialog.className = 'share-dialog';
+        dialog.innerHTML = `
+            <h3>Share Mindmap</h3>
+            <p>Generating share link...</p>
+            <div class="loading-spinner"></div>
+        `;
+
+        document.body.appendChild(overlay);
+        document.body.appendChild(dialog);
+
         try {
             updateCurrentMindmap();
             if (!currentMindmap.markdown) {
@@ -1444,15 +1590,28 @@
 
         } catch (error) {
             console.error('Error sharing mindmap:', error);
-            alert('Failed to share mindmap. Please try again.');
+            dialog.innerHTML = `
+                <h3>Share Mindmap</h3>
+                <p style="color: red;">Failed to share mindmap. Please try again.</p>
+                <div class="dialog-buttons">
+                    <button class="dialog-button cancel" onclick="closeShareDialog()">Close</button>
+                </div>
+            `;
 
             if (window.dataLayer) {
-                window
-                    .dataLayer
-                    .push({'event': 'mindmap_share_error', 'action': 'Share Failed'});
+                window.dataLayer.push({
+                    'event': 'mindmap_share_error',
+                    'action': 'Share Failed'
+                });
+            }
+        } finally {
+            if (shareButton) {
+                shareButton.disabled = false;
+                shareButton.style.opacity = '1';
             }
         }
-    }
+        }
+    
 
     function copyShareLink() {
         const shareLink = document.querySelector('.share-link');
@@ -1712,7 +1871,7 @@
             const svgUrl = URL.createObjectURL(svgBlob);
 
             img.onload = function () {
-                const scale = 2; // Increase resolution
+                const scale = 2; 
                 canvas.width = img.width * scale;
                 canvas.height = img.height * scale;
                 context.fillStyle = '#ffffff';
@@ -2069,49 +2228,98 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 
     async function shareMindmap() {
-        try {
-            updateCurrentMindmap();
-            const response = await fetch('https://api.mindmapwizard.com/share', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(
-                    {topic: currentMindmap.topic, markdown: currentMindmap.markdown, timestamp: new Date().toISOString()}
-                )
+    const shareButton = document.querySelector('.share-button');
+    if (shareButton) {
+        shareButton.disabled = true;
+        shareButton.style.opacity = '0.5';
+    }
+
+    const overlay = document.createElement('div');
+    overlay.className = 'overlay';
+    overlay.style.display = 'block';
+
+    const dialog = document.createElement('div');
+    dialog.className = 'share-dialog';
+    dialog.innerHTML = `
+        <h3>Share Mindmap</h3>
+        <p>Generating share link...</p>
+        <div class="loading-spinner"></div>
+    `;
+
+    document.body.appendChild(overlay);
+    document.body.appendChild(dialog);
+
+    try {
+        updateCurrentMindmap();
+        if (!currentMindmap.markdown) {
+            throw new Error('No mind map content available to share');
+        }
+        const response = await fetch('https://api.mindmapwizard.com/share', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(
+                {topic: currentMindmap.topic, markdown: currentMindmap.markdown, timestamp: new Date().toISOString()}
+            )
+        });
+
+        const data = await response.json();
+
+        if (window.dataLayer) {
+            window
+                .dataLayer
+                .push({'event': 'mindmap_share_success', 'action': 'Share Success'});
+        }
+
+        const shareUrl = `${window.location.origin}/view.html?id=${data.id}`;
+
+        const overlay = document.createElement('div');
+        overlay.className = 'overlay';
+        overlay.style.display = 'block';
+
+        const dialog = document.createElement('div');
+        dialog.className = 'share-dialog';
+        dialog.innerHTML = `
+            <h3>Share Mindmap</h3>
+            <p>Copy this link to share your mindmap:</p>
+            <input type="text" class="share-link" value="${shareUrl}" readonly>
+            <div class="dialog-buttons">
+                <button class="dialog-button cancel" onclick="closeShareDialog()">Close</button>
+                <button class="dialog-button confirm" onclick="copyShareLink()">Copy Link</button>
+            </div>
+        `;
+
+        document
+            .body
+            .appendChild(overlay);
+        document
+            .body
+            .appendChild(dialog);
+
+    } catch (error) {
+        console.error('Error sharing mindmap:', error);
+        dialog.innerHTML = `
+            <h3>Share Mindmap</h3>
+            <p style="color: red;">Failed to share mindmap. Please try again.</p>
+            <div class="dialog-buttons">
+                <button class="dialog-button cancel" onclick="closeShareDialog()">Close</button>
+            </div>
+        `;
+
+        if (window.dataLayer) {
+            window.dataLayer.push({
+                'event': 'mindmap_share_error',
+                'action': 'Share Failed'
             });
-
-            const data = await response.json();
-
-            const shareUrl = `${window.location.origin}/view.html?id=${data.id}`;
-
-            const overlay = document.createElement('div');
-            overlay.className = 'overlay';
-            overlay.style.display = 'block';
-
-            const dialog = document.createElement('div');
-            dialog.className = 'share-dialog';
-            dialog.innerHTML = `
-                    <h3>Share Mindmap</h3>
-                    <p>Copy this link to share your mindmap:</p>
-                    <input type="text" class="share-link" value="${shareUrl}" readonly>
-                    <div class="dialog-buttons">
-                        <button class="dialog-button cancel" onclick="closeShareDialog()">Close</button>
-                        <button class="dialog-button confirm" onclick="copyShareLink()">Copy Link</button>
-                    </div>
-                `;
-
-            document
-                .body
-                .appendChild(overlay);
-            document
-                .body
-                .appendChild(dialog);
-        } catch (error) {
-            console.error('Error sharing mindmap:', error);
-            alert('Failed to share mindmap. Please try again.');
+        }
+    } finally {
+        if (shareButton) {
+            shareButton.disabled = false;
+            shareButton.style.opacity = '1';
         }
     }
+}
 
     function copyShareLink() {
         const input = document.querySelector('.share-link');
@@ -2136,7 +2344,13 @@ document.addEventListener('DOMContentLoaded', function() {
                 .display = 'flex';
         }
     };
+
+    document.querySelector('.info-button').addEventListener('click', function(e) {
+            e.preventDefault();
+            document.querySelector('.info-menu').classList.toggle('show');
+        });
 </script>
 </body>
 </html>
+
 
