--- a/playground.html
+++ b/playground.html
@@ -458,10 +458,10 @@
             }
 
             .help-button {
-                width: 30px;
-                height: 30px;
+                width: 23px;
+                height: 23px;
                 border-radius: 50%;
-                background-color: #f0f0f0;
+                background-color: var(--primary-color);
                 border: none;
                 cursor: pointer;
                 position: fixed;
@@ -469,15 +469,64 @@
                 bottom: 5px;
                 align-items: center;
                 justify-content: center;
-                font-size: 25px;
+                font-size: 20px;
                 padding: 5px;
-                color: #1e293b;
+                color: #ffffff;
                 margin-left: 8px;
                 transition: all 0.3s ease;
             }
 
             .help-button:hover {
-                background-color: #e0e0e0;
+                background-color: var(--secondary-color);
+            }
+
+            .info-button {
+                position: fixed;
+                bottom: 15px;
+                right: 15px;
+                display: flex;
+                align-items: center;
+                background-color: rgba(255, 255, 255, 0.9);
+                backdrop-filter: blur(10px);
+                -webkit-backdrop-filter: blur(10px);
+                border-radius: 25px;
+                padding: 10px;
+                text-decoration: none;
+                color: var(--text-color);
+                transition: all 0.3s ease;
+                z-index: 1000;
+                cursor: pointer;
+            }
+
+            .info-menu {
+                position: fixed;
+                bottom: 70px;
+                right: 20px;
+                background-color: rgba(255, 255, 255, 0.9);
+                backdrop-filter: blur(10px);
+                -webkit-backdrop-filter: blur(10px);
+                border-radius: 15px;
+                padding: 10px;
+                display: none;
+                flex-direction: column;
+                z-index: 1000;
+            }
+
+            .info-menu.show {
+                display: flex;
+            }
+
+            .info-menu a {
+                color: var(--text-color);
+                text-decoration: none;
+                padding: 8px 15px;
+                border-radius: 8px;
+                transition: background-color 0.3s ease;
+                white-space: nowrap;
+            }
+
+            .info-menu a:hover {
+                background-color: rgba(0, 0, 0, 0.05);
             }
 
     </style>
@@ -507,6 +556,14 @@
                         style="display:none;visibility:hidden"></iframe>
                 </noscript>
                 <!-- End Google Tag Manager (noscript) -->
+        <div class="info-button">
+            <img src="/img/icons/info-icon.svg" alt="Info" width="22" height="22">
+        </div>
+        <div class="info-menu">
+            <a href="/feedback.html">Feedback</a>
+            <a href="/terms-of-use.html">Terms of Use</a>
+            <a href="/privacy-policy.html">Privacy Policy</a>
+        </div>
         <div class="popup" id="legalPopup">
             <div class="popup-content">
                 <div>
@@ -680,6 +737,18 @@ console.log('hello, JavaScript')
                     topic: textarea.value.split('\n')[0].replace('# ', '')
                 };
 
+                const shareDialog = document.querySelector('.share-dialog');
+                const overlay = document.querySelector('.overlay');
+                
+                // Show loading state
+                shareDialog.innerHTML = `
+                    <h3>Share Mind Map</h3>
+                    <p>Generating share link...</p>
+                    <div class="loading-spinner"></div>
+                `;
+                shareDialog.style.display = 'block';
+                overlay.style.display = 'block';
+
                 try {
                     const response = await fetch('https://api.mindmapwizard.com/share', {
                         method: 'POST',
@@ -695,13 +764,16 @@ console.log('hello, JavaScript')
 
                     const data = await response.json();
                     const shareUrl = `${window.location.origin}/view.html?id=${data.id || sessionId}`;
-                    const shareDialog = document.querySelector('.share-dialog');
-                    const overlay = document.querySelector('.overlay');
-                    const shareLink = document.querySelector('.share-link');
                     
-                    shareLink.value = shareUrl;
-                    shareDialog.style.display = 'block';
-                    overlay.style.display = 'block';
+                    // Update dialog with share link
+                    shareDialog.innerHTML = `
+                        <h3>Share Mind Map</h3>
+                        <input type="text" class="share-link" readonly="readonly" value="${shareUrl}">
+                        <div class="dialog-buttons">
+                            <button class="dialog-button cancel" onclick="closeShareDialog()">Close</button>
+                            <button class="dialog-button confirm" onclick="copyShareLink()">Copy link</button>
+                        </div>
+                    `;
                 } catch (error) {
                     console.error('Error sharing mindmap:', error);
                     alert('Failed to share mindmap. Please try again.');
@@ -741,6 +813,22 @@ console.log('hello, JavaScript')
                     localStorage.setItem('mindmap-history', JSON.stringify(existingHistory));
                 }
             }
+        </script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                const infoButton = document.querySelector('.info-button');
+                const infoMenu = document.querySelector('.info-menu');
+
+                infoButton.addEventListener('click', function() {
+                    infoMenu.classList.toggle('show');
+                });
+
+                document.addEventListener('click', function(event) {
+                    if (!infoButton.contains(event.target) && !infoMenu.contains(event.target)) {
+                        infoMenu.classList.remove('show');
+                    }
+                });
+            });
         </script>
     </body>
 </html>
