--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta
                 name="description"
                 content="Guide your curiosity! Just type in a topic to create mind maps easily. That’s it! You’ll get your mind map instantly. It’s free, no sign-up needed and it’s open source.">
@@ -45,24 +42,6 @@
             <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.16.1"></script>
             <script src="https://cdn.jsdelivr.net/npm/markmap-view@0.16.0"></script>
             <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader@0.16"></script>
-            <!-- Google Tag Manager -->
-            <script>
-                (function (w, d, s, l, i) {
-                    w[l] = w[l] || [];
-                    w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-                    var f = d.getElementsByTagName(s)[0],
-                        j = d.createElement(s),
-                        dl = l != 'dataLayer'
-                            ? '&l=' + l
-                            : '';
-                    j.async = true;
-                    j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-                    f
-                        .parentNode
-                        .insertBefore(j, f);
-                })(window, document, 'script', 'dataLayer', 'GTM-TF3MJBX9');
-            </script>
-            <!-- End Google Tag Manager -->
             <style>
                 :root {
                     --primary-color: #C667FF;
@@ -71,8 +50,6 @@
                     --text-color: #1e293b;
                     --border-color: #e2e8f0;
                     --error-color: #dc2626;
-                    --bar-height: 50px;
-
                 }
 
                 * {
@@ -243,13 +220,10 @@
                     backdrop-filter: blur(0);
                     position: fixed;
                     top: 0;
+                    left: 0;
                     height: 50px;
-                    left: 0;
-                    z-index: 1000;
-                    box-sizing: border-box;
-                    padding: 15px 3 10px 10px;
                     width: 100%;
-                    left: 0;
+                    z-index: 1000;
                     box-shadow: 0 4px 6px rgba(0, 0, 0, 0);
                     transition: all 0.3s ease;
                 }
@@ -322,7 +296,7 @@
                 }
 
                 .nav-links a {
-                    margin-left: 20px;
+                    margin-left: 10px;
                     text-decoration: none;
                     color: black;
                     font-weight: 500;
@@ -340,13 +314,10 @@
                 }
 
                 .container {
-                    margin: 0 auto;
+                    margin: 60px auto 0;
                     padding: 0 20px;
                     position: relative;
                     z-index: 100;
-                    margin: 0 auto;
-                    padding: 0 20px;
-                    margin-top: 60px;
                 }
 
                 @media (max-width: 700px) {
@@ -374,12 +345,11 @@
                     text-align: center;
                     margin-bottom: 0;
                     z-index: 100;
-                    padding: 50px;
+                    padding: 20px;
                     height: 35vw;
                     border-radius: 8px;
                     background-image: radial-gradient(circle, lightgray 6%, transparent 10%);
                     background-size: 25px 25px;
-                    padding: 20px;
                 }
 
                 .header-badge {
@@ -393,11 +363,36 @@
                     font-size: 1.2rem;
                 }
 
+                .logo-badge {
+                    background-color: #c5f389;
+                    border: none;
+                    color: #1e293b;
+                    margin-left: 8px;
+                    border-radius: 20px;
+                    padding: 0px 14px !important;
+                    width: fit-content;
+                    font-weight: 550;
+                    font-size: 1rem;
+                    display: none;
+                }
+
                 @media (max-width: 750px) {
                     .header-badge {
                         font-size: 1rem;
                     }
+
+                    .logo-badge {
+                        font-size: 1rem;
+                    }
                 }
+
+                @media (max-width: 445px) {
+
+                   .logo-badge {
+                        display: none !important;
+                    }
+                }
+
                 .header h1 {
                     font-size: 3rem;
                     line-height: 1.3;
@@ -503,12 +498,12 @@
                     margin-right: 20px;
                     margin-left: auto;
                     background: white;
-                    border-radius: 12px;
                     padding: 8px 15px;
                     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+                    border-radius: 12px;
+                    border: 1px solid #cbd5e04d;
                     width: 300px;
                     text-align: left;
-                    border: 1px solid #cbd5e08d;
                     z-index: 999;
                 }
 
@@ -530,14 +525,15 @@
                 }
 
                 .live-counter .count {
-                    font-size: 1.8rem;
+                    font-size: 2.5rem;
                     font-weight: 800;
                     color: #4a5568;
                     margin: 0;
+                    margin-bottom: 5px;
                 }
 
                 .live-counter .label {
-                    font-size: 0.9rem;
+                    font-size: 1.1rem;
                     font-weight: 500;
                     color: #4a5568;
                 }
@@ -993,7 +989,7 @@
                 }
 
                 .roadmap-item-done {
-                    background-color: #b4ffa0;
+                    background-color: #c5f389;
                     padding: 3px 8px;
                     border-radius: 20px;
                     margin-right: 10px;
@@ -1091,9 +1087,10 @@
 
                 .review-card {
                     background: white;
-                    border-radius: 12px;
+                    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+                    border-radius: 16px;
+                    border: 1px solid #cbd5e047;
                     padding: 20px;
-                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
                     display: flex;
                     flex-direction: column;
                 }
@@ -1503,7 +1500,7 @@
                 }
 
                 .categories-bar {
-                    height: var(--bar-height);
+                    height: 60px;
                     background: #f5f5f7;
                     overflow: hidden;
                     position: relative;
@@ -1564,7 +1561,7 @@
                         transform: translateX(0);
                     }
                     100% {
-                        transform: translateX(-100%);
+                        transform: translateX(-33.33%);
                     }
                 }
 
@@ -1583,39 +1580,20 @@
             </style>
         </head>
         <script async="async" src="/consent.js"></script>
-
-        <!-- Google tag (gtag.js) -->
-        <script
-            async="async"
-            src="https://www.googletagmanager.com/gtag/js?id=G-4RTLM6HX39"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-
-            gtag('config', 'G-4RTLM6HX39');
         </script>
         <body>
-            <!-- Google Tag Manager (noscript) -->
-            <noscript>
-                <iframe
-                    src="https://www.googletagmanager.com/ns.html?id=GTM-TF3MJBX9"
-                    height="0"
-                    width="0"
-                    style="display:none;visibility:hidden"></iframe>
-            </noscript>
-            <!-- End Google Tag Manager (noscript) -->
             <div class="navbar">
                 <div class="text-logo">
                     <a href="/" class="logo-link">
                         <img src="/img/favicon96.png" alt="Logo" class="logo">
                         <h3 class="logo-text">Mind Map Wizard</h3>
+                             <div class="logo-badge" id="logo.badge">
+                                        <p>Free</p>
+                            </div>
                     </a>
                 </div>
                 <div class="nav-links">
-                    <a href="https://github.com/linus-sch/Mind-Map-Wizard">Github</a>
+                    <a href="https://github.com/linus-sch/Mind-Map-Wizard">GitHub</a>
                     <a href="/feedback.html">Feedback</a>
 
                     <a class="navbutton" href="/new.html">Get Started</a>
@@ -1626,7 +1604,7 @@
                     <div class="header" id="header">
                         <div class="header-badge">
                             <a href="" style="color: #1e293b; text-decoration: none;">
-                                <p>Free and Open Source
+                                <p>Free & Open Source
                                 </a>
                             </p>
                         </div>
@@ -2142,7 +2120,7 @@
             <span class="roadmap-item-done">Done</span>Inline code support for Mind Maps</li>
 
         <li class="roadmap-li">
-            <span class="roadmap-item-soon">Soon</span>More export options e.g. PNG or PDF</li>
+            <span class="roadmap-item-done">Done</span>More download options e.g. PNG or PDF</li>
 
         <li class="roadmap-li">
             <span class="roadmap-item-soon">Soon</span>Explore further from specific branches</li>
@@ -2155,7 +2133,7 @@
     <p class="roadmap-github-link">
         <a
             href="https://github.com/linus-sch/Mind-Map-Wizard"
-            style="text-decoration: none;">Contribute on Github
+            style="text-decoration: none;">Contribute on GitHub
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="6"
@@ -2226,7 +2204,7 @@ class="launch-platform-badge"></a>
         <span class="separator">|</span>
         <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
         <span class="separator">|</span>
-        <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">Github</a>
+        <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">GitHub</a>
         <span class="separator">|</span>
         <a href="/feedback.html" class="footer-link">Feedback</a>
     </p>
@@ -2278,17 +2256,18 @@ if (itemToggle == 'false') {
 items.forEach((item) => item.addEventListener('click', toggleAccordion));
 
 window.addEventListener('scroll', function () {
-const navbar = document.querySelector('.navbar');
-if (window.scrollY > 30) {
-    navbar
-        .classList
-        .add('scrolled');
-} else {
-    navbar
-        .classList
-        .remove('scrolled');
-}
+    const navbar = document.querySelector('.navbar');
+    const logoBadge = document.getElementById('logo.badge'); 
+
+    if (window.scrollY > 30) {
+        navbar.classList.add('scrolled');
+        logoBadge.style.display = 'block'; 
+    } else {
+        navbar.classList.remove('scrolled');
+        logoBadge.style.display = 'none'; 
+    }
 });
+
 
 const topics = [
 {
@@ -2460,10 +2439,6 @@ const categories = [
             '-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 1' +
             '1-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z'
 }, {
-    name: 'Philosophy',
-    color: '#8e44ad',
-    path: 'M21 12a9 9 0 11-18 0 9 9 0 0118 0z M9 10h.01M15 10h.01M9.75 15h4.5'
-}, {
     name: 'Chemistry',
     color: '#f1c40f',
     path: 'M20 8.04l-12.122 12.124a2.857 2.857 0 1 1 -4.041 -4.04l12.122 -12.124 M7 13h8 ' +
@@ -2475,6 +2450,10 @@ const categories = [
             '77 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747' +
             ' 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4' +
             '.5 1.253'
+}, {
+    name: 'Philosophy',
+    color: '#8e44ad',
+    path: 'M21 12a9 9 0 11-18 0 9 9 0 0118 0z M9 10h.01M15 10h.01M9.75 15h4.5'
 }, {
     name: 'Biology',
     color: '#2ecc71',
@@ -2511,48 +2490,49 @@ const categories = [
 ];
 
 function createCategoryBadges() {
-const container = document.getElementById('categoriesContainer');
+    const container = document.getElementById('categoriesContainer');
 
-for (let i = 0; i < 3; i++) {
-    categories.forEach(category => {
-        const badge = document.createElement('div');
-        badge.className = 'category-badge';
-        const icon = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
-        icon.setAttribute('viewBox', '0 0 24 24');
-        icon.setAttribute('width', '18');
-        icon.setAttribute('height', '18');
-        icon.style.fill = 'none';
-        icon.style.stroke = category.color;
-        icon.style.strokeWidth = '2';
-        icon.style.strokeLinecap = 'round';
-        icon.style.strokeLinejoin = 'round';
+    // Create 3 sets of badges to ensure smooth infinite scroll
+    for (let i = 0; i < 3; i++) {
+        categories.forEach(category => {
+            const badge = document.createElement('div');
+            badge.className = 'category-badge';
+            const icon = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
+            icon.setAttribute('viewBox', '0 0 24 24');
+            icon.setAttribute('width', '18');
+            icon.setAttribute('height', '18');
+            icon.style.fill = 'none';
+            icon.style.stroke = category.color;
+            icon.style.strokeWidth = '2';
+            icon.style.strokeLinecap = 'round';
+            icon.style.strokeLinejoin = 'round';
 
-        const path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-        path.setAttribute('d', category.path);
-        icon.appendChild(path);
+            const path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
+            path.setAttribute('d', category.path);
+            icon.appendChild(path);
 
-        const iconContainer = document.createElement('div');
-        iconContainer.className = 'category-icon';
-        iconContainer.appendChild(icon);
+            const iconContainer = document.createElement('div');
+            iconContainer.className = 'category-icon';
+            iconContainer.appendChild(icon);
 
-        const text = document.createElement('span');
-        text.textContent = category.name;
+            const text = document.createElement('span');
+            text.textContent = category.name;
 
-        badge.appendChild(iconContainer);
-        badge.appendChild(text);
-        badge.style.borderColor = category.color;
-        const color = category.color;
-        const r = parseInt(color.slice(1, 3), 16);
-        const g = parseInt(color.slice(3, 5), 16);
-        const b = parseInt(color.slice(5, 7), 16);
-        badge.style.backgroundColor = `rgba(${r}, ${g}, ${b}, 0.1)`;
-        container.appendChild(badge);
-    });
-}
+            badge.appendChild(iconContainer);
+            badge.appendChild(text);
+            badge.style.borderColor = category.color;
+            const color = category.color;
+            const r = parseInt(color.slice(1, 3), 16);
+            const g = parseInt(color.slice(3, 5), 16);
+            const b = parseInt(color.slice(5, 7), 16);
+            badge.style.backgroundColor = `rgba(${r}, ${g}, ${b}, 0.1)`;
+            container.appendChild(badge);
+        });
+    }
 
-const containerWidth = container.offsetWidth;
-const duration = containerWidth / 50;
-container.style.animation = `scroll ${duration}s linear infinite`;
+    const containerWidth = container.scrollWidth;
+    const duration = containerWidth / 80; 
+    container.style.animation = `scroll ${duration}s linear infinite`;
 }
 
 createCategoryBadges();
