--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -382,6 +382,19 @@
                 usage of Mind Map Wizard and to provide a more personalized experience.
             </li>
         </ul>
+        <h3>2.2.1. Data Anonymization Practices</h3>
+        <p>We are committed to protecting your privacy and implement the following data anonymization measures before processing any analytics data:</p>
+        <ul>
+            <li>
+                <strong>URL Query Parameter Removal</strong>: We automatically remove all query parameters from URLs (e.g., converting https://example.com/?q=mind-map-topic to https://example.com/) to prevent collection of potentially sensitive search or form data.
+            </li>
+            <li>
+                <strong>IP Address Trimming</strong>: We trim IP addresses before passing them to server-side loaded tools, reducing the precision of location data while maintaining basic analytics functionality.
+            </li>
+            <li>
+                <strong>User Agent String Cleaning</strong>: We clean sensitive information from User Agent strings by removing versions, extensions, and additional information that could be used for device fingerprinting.
+            </li>
+        </ul>
         <h3>2.3. Information from Third Parties</h3>
         <p>We may receive information about you from third parties, such as service
             providers, analytics companies, or other business partners, and combine it with
@@ -556,7 +569,7 @@
                 <span class="separator">|</span>
                 <a href="/terms-of-use.html" class="footer-link">Terms of Use</a>
                 <span class="separator">|</span>
-                <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">Github</a>
+                <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">GitHub</a>
                 <span class="separator">|</span>
                 <a href="/feedback.html" class="footer-link">Feedback</a>
             </p>
