--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -542,7 +542,7 @@
                     <span class="separator">|</span>
                     <a href="/privacy-policy.html" class="footer-link">Privacy Policy</a>
                     <span class="separator">|</span>
-                    <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">Github</a>
+                    <a href="https://github.com/linus-sch/Mind-Map-Wizard" class="footer-link">GitHub</a>
                     <span class="separator">|</span>
                     <a href="/feedback.html" class="footer-link">Feedback</a>
                 </p>
