--- a/404.html
+++ b/404.html
@@ -255,10 +255,11 @@
             .popup-content a:hover {
                 background-color: #e6e6e6;
             }
+            
         </style>
-        <script async="async" src="/consent.js"></script>
 
     </head>
+    <script src="rating-popup.js"></script>
     <body>
         <div class="popup" id="legalPopup">
             <div class="popup-content">
